# lolwiki

./: API.md  README.md  pyproject.toml
lolwiki/: __init__.py  cache.py  client.py  config.py
lolwiki/parsing/: champions.py  items.py
tests/: test_lolwiki.py
